added close button to panel, added no new items message to panel

--- a/data/panel.html
+++ b/data/panel.html
@@ -11,6 +11,7 @@
 			<div id="buttons">
 				<img class="control" id="panel-refresh" src="images/update_button.png">
 				<img class="control" id="panel-open-preferences" src="images/settings_button.png">
+				<img class="control" id="panel-close" src="images/close_button.png">
 			</div>
 		</div>
 		<div id="items"></div>
