--- a/data/popup.html
+++ b/data/popup.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
 	<body>
-		<center><table id="popup" height="100%" width="100%"><tr><td align="center"><div id="popupText"></div></td></tr></table></center>
+		<center><table class="popup" height="100%" width="100%"><tr><td align="center"><div class="popupText"></div></td></tr></table></center>
 	</body>
 </html>
