changed widget to button (support firefox >= 38), removed badge settings, fixed logging, fixed some bugs, added new bugs

--- a/data/panel.html
+++ b/data/panel.html
@@ -6,7 +6,7 @@
     </head>
 	<body>
 		<div class="header">
-			<img class="logo" data-function="panel-open-selfoss" src="images/widget_default.png">
+			<img class="logo" data-function="panel-open-selfoss" src="images/button_default.png">
 			<h2 class="title" data-function="panel-open-selfoss">Selfoss Notify</h2>
             <img class="control" data-function="panel-close" src="images/close_button.png">
 			<img class="control" data-function="panel-open-preferences" src="images/settings_button.png">
